--- a/app/saverloop/Internal/α.html
+++ b/app/saverloop/Internal/α.html
@@ -96,7 +96,7 @@
             }
         });
 
-        // 處理返回頁面事件，將介面重置
+        // 處理返回頁面事件
         window.addEventListener('pageshow', event => {
             if (event.persisted) {
                 isPlaying = false;
